<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_amount"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/txtAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_amount"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:focusedByDefault="true"
            android:selectAllOnFocus="true"
            android:text="@string/txtAmount_initial_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/main_txtFrom"/>
        <RadioGroup
            android:id="@+id/rgFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbFromDollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dollar"/>
            <RadioButton
                android:id="@+id/rbFromEuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_euro"/>
            <RadioButton
                android:id="@+id/rbFromPound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_pound"/>
            <ImageView
                android:id="@+id/imgFrom"
                android:src="@drawable/ic_euro"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30sp"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/main_txtTo"/>
        <RadioGroup
            android:id="@+id/rgTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbToDollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_dollar"/>
            <RadioButton
                android:id="@+id/rbToEuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_euro"/>
            <RadioButton
                android:id="@+id/rbToPound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_pound"/>
            <ImageView
                android:id="@+id/imgTo"
                android:src="@drawable/ic_dollar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30sp"/>
        </RadioGroup>
        <Button
            android:id="@+id/btnExchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_amount"
            android:text="@string/main_btnExchangeText"
            style="@style/Base.Widget.AppCompat.Button.Borderless" />

    </LinearLayout>